# Simple2DRenderer

./: .gitmodules  CMakeLists.txt  README.MD
asset/: EfficientRenderPath.py  EfficientRenderPoint.py
asset/THOTH2 93K 2X Loadboard/: Board_Dimension.csv  Keepout.csv  Pins.csv  Traces.csv
asset/glsl/: line.frag  line.geom  point.frag  point.vert
gui/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  SImple2DRenderer.h
